--- a/HW1/Main.ipynb
+++ b/HW1/Main.ipynb
@@ -273,6 +273,12 @@
    "source": [
     "The filtered pictures are always smaller than the original one.\n",
     "\n",
+    "Filter __h1__ has the size of original picture (100 x 100), with sigma = 0.5\n",
+    "\n",
+    "Filter __h2__ has the size of original picture (100 x 100), with sigma = 2\n",
+    "\n",
+    "Filter __h3__ has the size of one fourth of the original picture (50 x 50), with sigma = 2\n",
+    "\n",
     "The filters __h1__ and __h2__ has the same size but different sigma, __h2__ with larger sigma produces a more blurred picture.\n",
     "\n",
     "The filters __h2__ and __h3__ has the same sigma but different sizes, __h3__ with smaller filter size producess a larger filtered picture."
@@ -317,7 +323,11 @@
    "source": [
     "There is no difference between applying an image filting function and convolution when the image filter used in the two functions are Gaussian image filters.\n",
     "\n",
-    "Discuss:\n",
+    "The Gaussian image filter applies mean image filter over pixels covered by the kernal at a given time step, but change the pixel weights of universally one in mean image filter to values from a Gaussian distribution.\n",
+    "\n",
+    "The 2D convolution operation takes each pixel value covered by the kernal at a given time step and perform elementwise multiplication. When the kernal is a Gaussian distribution, it performs exactly the same operation as a Gaussian image filter.\n",
+    "\n",
+    "Reference:\n",
     "https://homepages.inf.ed.ac.uk/rbf/HIPR2/gsmooth.htm"
    ]
   },
