--- a/HW1/Main.ipynb
+++ b/HW1/Main.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -29,6 +32,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "hideCode": true,
+    "hideOutput": true,
     "scrolled": false
    },
    "outputs": [],
@@ -47,7 +52,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -77,7 +85,10 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,6 +115,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "hideCode": true,
     "scrolled": false
    },
    "outputs": [
@@ -172,7 +184,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true,
+    "hidePrompt": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -197,6 +213,8 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": false,
     "scrolled": false
    },
    "outputs": [
@@ -266,7 +284,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true,
+    "hidePrompt": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -294,6 +316,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "hideCode": true,
     "scrolled": false
    },
    "outputs": [
@@ -363,7 +386,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true,
+    "hidePrompt": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -389,6 +416,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "hideCode": true,
+    "hideOutput": false,
+    "hidePrompt": false,
     "scrolled": false
    },
    "outputs": [
@@ -458,7 +488,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -491,7 +524,10 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -517,6 +553,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "hideCode": true,
     "scrolled": false
    },
    "outputs": [
@@ -613,7 +650,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true,
+    "hidePrompt": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -642,6 +683,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "hideCode": true,
     "scrolled": false
    },
    "outputs": [
@@ -728,7 +770,10 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hideOutput": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -757,6 +802,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "hideCode": true,
     "scrolled": false
    },
    "outputs": [
@@ -1357,6 +1403,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Hide code",
   "kernelspec": {
    "display_name": "Matlab",
    "language": "matlab",
