--- a/HW3/Part 3.ipynb
+++ b/HW3/Part 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,21 @@
     "\n",
     "];\n",
     "\n",
+    "img1_1 = [206.5, 1262.5, 1];\n",
+    "img1_2 = [610.5, 1438.5, 1];\n",
+    "img1_3 = [162.5, 1010.5, 1];\n",
+    "img1_4 = [582.5, 1162.5, 1];\n",
+    "img1_5 = [362.5, 814.5, 1];\n",
+    "img1_6 = [570.5, 874.5, 1];\n",
+    "img1_7 = [806.5, 782.5, 1];\n",
+    "img1_8 = [510.5, 702.5, 1];\n",
+    "img1_9 = [486.5, 526.5, 1];\n",
+    "img1_10 = [686.5, 566.5, 1];\n",
+    "img1_11 = [894.5, 502.5, 1];\n",
+    "img1_12 = [1886.5, 1750.5, 1];\n",
+    "img1_13 = [2490.5, 1046.5, 1];\n",
+    "\n",
+    "\n",
     "img2 = [\n",
     "\n",
     "738.5,  1490.5, 698.5,  1490.5, 838.5,  1226.5, 1106.5, 550.5,  518.5,  898.5, 814.5, 2486.5, 1746.5;\n",
@@ -21,6 +36,20 @@
     "1,      1,      1,      1,      1,      1,      1,      1,      1,      1,     1,     1,      1;\n",
     "\n",
     "];\n",
+    "\n",
+    "img2_1 = [738.5, 2102.5, 1];\n",
+    "img2_2 = [1490.5, 1874.5, 1];\n",
+    "img2_3 = [698.5, 1838.5, 1];\n",
+    "img2_4 = [1490.5, 1618.5, 1];\n",
+    "img2_5 = [838.5, 1446.5, 1];\n",
+    "img2_6 = [1226.5, 1354.5, 1];\n",
+    "img2_7 = [1106.5, 1138.5, 1];\n",
+    "img2_8 = [550.5, 1254.5, 1];\n",
+    "img2_9 = [518.5, 1050.5, 1];\n",
+    "img2_10 = [898.5, 978.5, 1];\n",
+    "img2_11 = [814.5, 810.5, 1];\n",
+    "img2_12 = [2486.5, 1374.5, 1];\n",
+    "img2_13 = [1746.5, 734.5, 1];\n",
     "\n",
     "% corresponding_img1_img2 = [\n",
     "% 206.5, 1262.5, 738.5, 2102.5, 0;\n",
@@ -53,6 +82,18 @@
     "];\n",
     "\n",
     "\n",
+    "img3_1 = [1958.5, 2038.5, 1];\n",
+    "img3_2 = [1290.5, 1830.5, 1];\n",
+    "img3_3 = [1970.5, 1790.5, 1];\n",
+    "img3_4 = [1262.5, 1606.5, 1];\n",
+    "img3_5 = [1846.5, 1438.5, 1];\n",
+    "img3_6 = [1410.5, 1462.5, 1];\n",
+    "img3_7 = [1394.5, 1270.5, 1];\n",
+    "img3_8 = [1062.5, 1198.5, 1];\n",
+    "img3_9 = [2222.5, 938.5, 1];\n",
+    "img3_10 = [434.5, 1402.5, 1];\n",
+    "\n",
+    "\n",
     "img4 = [\n",
     "\n",
     "2654.5, 1882.5, 2722.5, 1906.5, 2502.5, 2134.5, 2154.5, 1706.5, 2046.5, 486.5;\n",
@@ -60,6 +101,21 @@
     "1,      1,      1,      1,      1,      1,      1,      1,      1,      1;\n",
     "\n",
     "];\n",
+    "\n",
+    "\n",
+    "img4_1 = [738.5, 2102.5, 1];\n",
+    "img4_2 = [1490.5, 1874.5, 1];\n",
+    "img4_3 = [698.5, 1838.5, 1];\n",
+    "img4_4 = [1490.5, 1618.5, 1];\n",
+    "img4_5 = [838.5, 1446.5, 1];\n",
+    "img4_6 = [1226.5, 1354.5, 1];\n",
+    "img4_7 = [1106.5, 1138.5, 1];\n",
+    "img4_8 = [550.5, 1254.5, 1];\n",
+    "img4_9 = [518.5, 1050.5, 1];\n",
+    "img4_10 = [898.5, 978.5, 1];\n",
+    "img4_11 = [814.5, 810.5, 1];\n",
+    "img4_12 = [2486.5, 1374.5, 1];\n",
+    "img4_13 = [1746.5, 734.5, 1];\n",
     "\n",
     "% corresponding_img3_img4 = [\n",
     "\n",
@@ -90,6 +146,20 @@
     "];\n",
     "\n",
     "\n",
+    "img5_1 = [738.5, 2102.5, 1];\n",
+    "img5_2 = [1490.5, 1874.5, 1];\n",
+    "img5_3 = [698.5, 1838.5, 1];\n",
+    "img5_4 = [1490.5, 1618.5, 1];\n",
+    "img5_5 = [838.5, 1446.5, 1];\n",
+    "img5_6 = [1226.5, 1354.5, 1];\n",
+    "img5_7 = [1106.5, 1138.5, 1];\n",
+    "img5_8 = [550.5, 1254.5, 1];\n",
+    "img5_9 = [518.5, 1050.5, 1];\n",
+    "img5_10 = [898.5, 978.5, 1];\n",
+    "img5_11 = [814.5, 810.5, 1];\n",
+    "img5_12 = [2486.5, 1374.5, 1];\n",
+    "img5_13 = [1746.5, 734.5, 1];\n",
+    "\n",
     "img6 = [\n",
     "\n",
     "2626.5, 2770.5, 1978.5, 2274.5, 2658.5, 2286.5, 2686.5, 242.5,  1970.5;\n",
@@ -98,6 +168,20 @@
     "\n",
     "];\n",
     "\n",
+    "\n",
+    "img6_1 = [738.5, 2102.5, 1];\n",
+    "img6_2 = [1490.5, 1874.5, 1];\n",
+    "img6_3 = [698.5, 1838.5, 1];\n",
+    "img6_4 = [1490.5, 1618.5, 1];\n",
+    "img6_5 = [838.5, 1446.5, 1];\n",
+    "img6_6 = [1226.5, 1354.5, 1];\n",
+    "img6_7 = [1106.5, 1138.5, 1];\n",
+    "img6_8 = [550.5, 1254.5, 1];\n",
+    "img6_9 = [518.5, 1050.5, 1];\n",
+    "img6_10 = [898.5, 978.5, 1];\n",
+    "img6_11 = [814.5, 810.5, 1];\n",
+    "img6_12 = [2486.5, 1374.5, 1];\n",
+    "img6_13 = [1746.5, 734.5, 1];\n",
     "\n",
     "% corresponding_img5_img6 = [\n",
     "\n",
@@ -117,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,38 +217,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;31m'epipolarLine' requires Computer Vision Toolbox.\n",
       "\n",
-      "\u001b[0m"
+      "x12_1 =\n",
+      "\n",
+      "   -0.0021\n",
+      "\n",
+      "\n",
+      "x12_2 =\n",
+      "\n",
+      "   2.5709e-04\n",
+      "\n",
+      "\n",
+      "x12_3 =\n",
+      "\n",
+      "   2.1827e-04\n",
+      "\n",
+      "\n",
+      "x12_4 =\n",
+      "\n",
+      "   -0.0015\n",
+      "\n",
+      "\n",
+      "x12_5 =\n",
+      "\n",
+      "   8.5290e-04\n",
+      "\n",
+      "\n",
+      "x12_6 =\n",
+      "\n",
+      "   -0.0015\n",
+      "\n",
+      "\n",
+      "x12_7 =\n",
+      "\n",
+      "    0.0055\n",
+      "\n",
+      "\n",
+      "x12_8 =\n",
+      "\n",
+      "   -0.0054\n",
+      "\n",
+      "\n",
+      "x12_9 =\n",
+      "\n",
+      "  -8.6706e-04\n",
+      "\n",
+      "\n",
+      "x12_10 =\n",
+      "\n",
+      "   -0.0049\n",
+      "\n",
+      "\n",
+      "x12_11 =\n",
+      "\n",
+      "    0.0020\n",
+      "\n",
+      "\n",
+      "x12_12 =\n",
+      "\n",
+      "   -0.0124\n",
+      "\n",
+      "\n",
+      "x12_13 =\n",
+      "\n",
+      "   -0.0082\n",
+      "\n"
      ]
-    },
-    {
-     "ename": "Error",
-     "evalue": -1,
-     "output_type": "error",
-     "traceback": "epipolarLine requires a Video_and_Image_Blockset license.\n"
     }
    ],
    "source": [
-    "% Epipolar lines for img1 & img2 \n",
-    "lines = epipolarLine(F1,img1)\n",
-    "lines = epipolarLine(F1',img1)\n",
+    "% size(F1)\n",
+    "% size(img1_1')\n",
+    "% size(img2_1)\n",
+    "x12_1 = img2_1 * F1 * img1_1'\n",
+    "x12_2 = img2_2 * F1 * img1_2'\n",
+    "x12_3 = img2_3 * F1 * img1_3'\n",
+    "x12_4 = img2_4 * F1 * img1_4'\n",
+    "x12_5 = img2_5 * F1 * img1_5'\n",
+    "x12_6 = img2_6 * F1 * img1_6'\n",
+    "x12_7 = img2_7 * F1 * img1_7'\n",
+    "x12_8 = img2_8 * F1 * img1_8'\n",
+    "x12_9 = img2_9 * F1 * img1_9'\n",
+    "x12_10 = img2_10 * F1 * img1_10'\n",
+    "x12_11 = img2_11 * F1 * img1_11'\n",
+    "x12_12 = img2_12 * F1 * img1_12'\n",
+    "x12_13 = img2_13 * F1 * img1_13'\n",
     "\n",
     "\n",
-    "% Epipolar lines for img3 & img4\n",
-    "lines = epipolarLine(F2,img3)\n",
-    "lines = epipolarLine(F2',img3)\n",
-    "\n",
-    "% Epipolar lines for img5 & img6 \n",
-    "lines = epipolarLine(F3,img5)\n",
-    "lines = epipolarLine(F3',img5)"
+    "% x12_1 = img1_1 * F1 * img2_1'\n",
+    "% x12_2 = img2_2 * F1 * img2_2'\n",
+    "% x12_3 = img1_3 * F1 * img2_3'\n",
+    "% x12_4 = img1_4 * F1 * img2_4'\n",
+    "% x12_5 = img1_5 * F1 * img2_5'\n",
+    "% x12_6 = img1_6 * F1 * img2_6'\n",
+    "% x12_7 = img1_7 * F1 * img2_7'\n",
+    "% x12_8 = img1_8 * F1 * img2_8'\n",
+    "% x12_9 = img1_9 * F1 * img2_9'\n",
+    "% x12_10 = img1_10 * F1 * img2_10'\n",
+    "% x12_11 = img1_11 * F1 * img2_11'\n",
+    "% x12_12 = img1_12 * F1 * img2_12'\n",
+    "% x12_13 = img1_13 * F1 * img2_13'"
    ]
   },
   {
