Finished for all combos

--- a/HW3/Part 3.ipynb
+++ b/HW3/Part 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,19 +103,16 @@
     "];\n",
     "\n",
     "\n",
-    "img4_1 = [738.5, 2102.5, 1];\n",
-    "img4_2 = [1490.5, 1874.5, 1];\n",
-    "img4_3 = [698.5, 1838.5, 1];\n",
-    "img4_4 = [1490.5, 1618.5, 1];\n",
-    "img4_5 = [838.5, 1446.5, 1];\n",
-    "img4_6 = [1226.5, 1354.5, 1];\n",
-    "img4_7 = [1106.5, 1138.5, 1];\n",
-    "img4_8 = [550.5, 1254.5, 1];\n",
-    "img4_9 = [518.5, 1050.5, 1];\n",
-    "img4_10 = [898.5, 978.5, 1];\n",
-    "img4_11 = [814.5, 810.5, 1];\n",
-    "img4_12 = [2486.5, 1374.5, 1];\n",
-    "img4_13 = [1746.5, 734.5, 1];\n",
+    "img4_1 = [2654.5, 1882.5, 1];\n",
+    "img4_2 = [1882.5, 1894.5, 1];\n",
+    "img4_3 = [2722.5, 1626.5, 1];\n",
+    "img4_4 = [1906.5, 1642.5, 1];\n",
+    "img4_5 = [2502.5, 1302.5, 1];\n",
+    "img4_6 = [2134.5, 1442.5, 1];\n",
+    "img4_7 = [2154.5, 1230.5, 1];\n",
+    "img4_8 = [1706.5, 1242.5, 1];\n",
+    "img4_9 = [2046.5, 790.5, 1];\n",
+    "img4_10 = [486.5, 1738.5, 1];\n",
     "\n",
     "% corresponding_img3_img4 = [\n",
     "\n",
@@ -146,19 +143,16 @@
     "];\n",
     "\n",
     "\n",
-    "img5_1 = [738.5, 2102.5, 1];\n",
-    "img5_2 = [1490.5, 1874.5, 1];\n",
-    "img5_3 = [698.5, 1838.5, 1];\n",
-    "img5_4 = [1490.5, 1618.5, 1];\n",
-    "img5_5 = [838.5, 1446.5, 1];\n",
-    "img5_6 = [1226.5, 1354.5, 1];\n",
-    "img5_7 = [1106.5, 1138.5, 1];\n",
-    "img5_8 = [550.5, 1254.5, 1];\n",
-    "img5_9 = [518.5, 1050.5, 1];\n",
-    "img5_10 = [898.5, 978.5, 1];\n",
-    "img5_11 = [814.5, 810.5, 1];\n",
-    "img5_12 = [2486.5, 1374.5, 1];\n",
-    "img5_13 = [1746.5, 734.5, 1];\n",
+    "img5_1 = [2378.5, 1434.5, 1];\n",
+    "img5_2 = [2802.5, 954.5, 1];\n",
+    "img5_3 = [1882.5, 962.5, 1];\n",
+    "img5_4 = [1998.5, 902.5, 1];\n",
+    "img5_5 = [2282.5, 998.5, 1];\n",
+    "img5_6 = [2002.5, 690.5, 1];\n",
+    "img5_7 = [2298.5, 774.5, 1];\n",
+    "img5_8 = [386.5, 1190.5, 1];\n",
+    "img5_9 = [1114.5, 1930.5, 1];\n",
+    "\n",
     "\n",
     "img6 = [\n",
     "\n",
@@ -169,19 +163,16 @@
     "];\n",
     "\n",
     "\n",
-    "img6_1 = [738.5, 2102.5, 1];\n",
-    "img6_2 = [1490.5, 1874.5, 1];\n",
-    "img6_3 = [698.5, 1838.5, 1];\n",
-    "img6_4 = [1490.5, 1618.5, 1];\n",
-    "img6_5 = [838.5, 1446.5, 1];\n",
-    "img6_6 = [1226.5, 1354.5, 1];\n",
-    "img6_7 = [1106.5, 1138.5, 1];\n",
-    "img6_8 = [550.5, 1254.5, 1];\n",
-    "img6_9 = [518.5, 1050.5, 1];\n",
-    "img6_10 = [898.5, 978.5, 1];\n",
-    "img6_11 = [814.5, 810.5, 1];\n",
-    "img6_12 = [2486.5, 1374.5, 1];\n",
-    "img6_13 = [1746.5, 734.5, 1];\n",
+    "img6_1 = [2626.5, 1114.5, 1];\n",
+    "img6_2 = [2770.5, 578.5, 1];\n",
+    "img6_3 = [1978.5, 742.5, 1];\n",
+    "img6_4 = [2274.5, 654.5, 1];\n",
+    "img6_5 = [2658.5, 706.5, 1];\n",
+    "img6_6 = [2286.5, 442.5, 1];\n",
+    "img6_7 = [2686.5, 478.5, 1];\n",
+    "img6_8 = [242.5, 1374.5, 1];\n",
+    "img6_9 = [1970.5, 1958.5, 1];\n",
+    "\n",
     "\n",
     "% corresponding_img5_img6 = [\n",
     "\n",
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -288,14 +279,107 @@
       "x12_13 =\n",
       "\n",
       "   -0.0082\n",
+      "\n",
+      "\n",
+      "x34_1 =\n",
+      "\n",
+      "   -0.7492\n",
+      "\n",
+      "\n",
+      "x34_2 =\n",
+      "\n",
+      "   -0.2183\n",
+      "\n",
+      "\n",
+      "x34_3 =\n",
+      "\n",
+      "   -0.5766\n",
+      "\n",
+      "\n",
+      "x34_4 =\n",
+      "\n",
+      "   -0.0725\n",
+      "\n",
+      "\n",
+      "x34_5 =\n",
+      "\n",
+      "   -0.2613\n",
+      "\n",
+      "\n",
+      "x34_6 =\n",
+      "\n",
+      "   -0.0946\n",
+      "\n",
+      "\n",
+      "x34_7 =\n",
+      "\n",
+      "    0.0198\n",
+      "\n",
+      "\n",
+      "x34_8 =\n",
+      "\n",
+      "    0.2120\n",
+      "\n",
+      "\n",
+      "x34_9 =\n",
+      "\n",
+      "   -0.1469\n",
+      "\n",
+      "\n",
+      "x34_10 =\n",
+      "\n",
+      "    0.5711\n",
+      "\n",
+      "\n",
+      "x56_1 =\n",
+      "\n",
+      "   -0.2668\n",
+      "\n",
+      "\n",
+      "x56_2 =\n",
+      "\n",
+      "   -0.0027\n",
+      "\n",
+      "\n",
+      "x56_3 =\n",
+      "\n",
+      "    0.1774\n",
+      "\n",
+      "\n",
+      "x56_4 =\n",
+      "\n",
+      "    0.1755\n",
+      "\n",
+      "\n",
+      "x56_5 =\n",
+      "\n",
+      "    0.0404\n",
+      "\n",
+      "\n",
+      "x56_6 =\n",
+      "\n",
+      "    0.2732\n",
+      "\n",
+      "\n",
+      "x56_7 =\n",
+      "\n",
+      "    0.1867\n",
+      "\n",
+      "\n",
+      "x56_8 =\n",
+      "\n",
+      "    0.8304\n",
+      "\n",
+      "\n",
+      "x56_9 =\n",
+      "\n",
+      "   -0.0516\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "% size(F1)\n",
-    "% size(img1_1')\n",
-    "% size(img2_1)\n",
+    "%% Images 1 and 2\n",
     "x12_1 = img2_1 * F1 * img1_1'\n",
     "x12_2 = img2_2 * F1 * img1_2'\n",
     "x12_3 = img2_3 * F1 * img1_3'\n",
@@ -312,7 +396,7 @@
     "\n",
     "\n",
     "% x12_1 = img1_1 * F1 * img2_1'\n",
-    "% x12_2 = img2_2 * F1 * img2_2'\n",
+    "% x12_2 = img1_2 * F1 * img2_2'\n",
     "% x12_3 = img1_3 * F1 * img2_3'\n",
     "% x12_4 = img1_4 * F1 * img2_4'\n",
     "% x12_5 = img1_5 * F1 * img2_5'\n",
@@ -323,7 +407,36 @@
     "% x12_10 = img1_10 * F1 * img2_10'\n",
     "% x12_11 = img1_11 * F1 * img2_11'\n",
     "% x12_12 = img1_12 * F1 * img2_12'\n",
-    "% x12_13 = img1_13 * F1 * img2_13'"
+    "% x12_13 = img1_13 * F1 * img2_13'\n",
+    "\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "\n",
+    "%% Images 3 and 4\n",
+    "x34_1 = img4_1 * F1 * img3_1'\n",
+    "x34_2 = img4_2 * F1 * img3_2'\n",
+    "x34_3 = img4_3 * F1 * img3_3'\n",
+    "x34_4 = img4_4 * F1 * img3_4'\n",
+    "x34_5 = img4_5 * F1 * img3_5'\n",
+    "x34_6 = img4_6 * F1 * img3_6'\n",
+    "x34_7 = img4_7 * F1 * img3_7'\n",
+    "x34_8 = img4_8 * F1 * img3_8'\n",
+    "x34_9 = img4_9 * F1 * img3_9'\n",
+    "x34_10 = img4_10 * F1 * img3_10'\n",
+    "\n",
+    "\n",
+    "\n",
+    "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\n",
+    "\n",
+    "%% Images 5 and 6\n",
+    "x56_1 = img6_1 * F1 * img5_1'\n",
+    "x56_2 = img6_2 * F1 * img5_2'\n",
+    "x56_3 = img6_3 * F1 * img5_3'\n",
+    "x56_4 = img6_4 * F1 * img5_4'\n",
+    "x56_5 = img6_5 * F1 * img5_5'\n",
+    "x56_6 = img6_6 * F1 * img5_6'\n",
+    "x56_7 = img6_7 * F1 * img5_7'\n",
+    "x56_8 = img6_8 * F1 * img5_8'\n",
+    "x56_9 = img6_9 * F1 * img5_9'\n"
    ]
   },
   {
